--- a/DanceCalc/m4d/Views/Song/EditCore.cshtml
+++ b/DanceCalc/m4d/Views/Song/EditCore.cshtml
@@ -107,12 +107,10 @@
         </div>
     </div>
 
-    <div class="row">
-        <div class="col-md-12" style="padding-top: 5px">
-            @Html.Partial("Dances")
-        </div>
+    <div class="row" style="padding-top: 5px">
+        @Html.Partial("Dances")
     </div>
-    
+
     <hr class="row col-md-12" />
     <div class="row col-md-12">
         <table>
