--- a/DanceCalc/m4d/Views/Song/DetailsCore.cshtml
+++ b/DanceCalc/m4d/Views/Song/DetailsCore.cshtml
@@ -120,10 +120,8 @@
 
 @if (Model.DanceRatings != null)
 {
-    <div class="row">
-        <div class="col-md-12" style="padding-top: 5px">
-            @Html.Partial("Dances")
-        </div>
+    <div class="row" style="padding-top: 5px">
+        @Html.Partial("Dances")
     </div>
 }
 
