Added all songs to table of contents + fixed a bug on tags where we were showing generic filter + dance filter when they both did the same thing...

--- a/DanceCalc/m4d/App_Code/TagHelpers.cshtml
+++ b/DanceCalc/m4d/App_Code/TagHelpers.cshtml
@@ -37,7 +37,7 @@
             urlDance = urlBase + "&filter=" + WebUtility.UrlEncode(filterDance.ToString());
         }
 
-        if (!filter.IsEmptyPaged)
+        if (!filter.IsEmptyDance)
         {
             urlFiltered = urlBase + "&filter=" + WebUtility.UrlEncode(filter.ToString());
         }
