--- a/m4d/Views/Shared/_Layout.cshtml
+++ b/m4d/Views/Shared/_Layout.cshtml
@@ -101,7 +101,7 @@
                             <li>@Html.ActionLink("Song Library", "index", "song")
                                 <ul style="list-style-type:none" role="menu">
                                     <li>@Html.ActionLink("Advanced Search", "advancedsearchform", "song")</li>
-                                    <li>Search BETA
+                                    <li><a href="https://www.music4dance.net/blog/music4dance-help/simple-search/">Search BETA</a>
                                         <ul>
                                             <li style="list-style: none; margin-left: -2em">@Html.ActionLink("Simple", "azuresearch", "song")</li>
                                             <li style="list-style:none; margin-left: -2em">@Html.ActionLink("Advanced", "advancedsearchform", "song", new { filter = new SongFilter("azure+advanced") }, null)</li>
