Initial sketch of raw search

--- a/m4d/Views/Song/AzureSearch.cshtml
+++ b/m4d/Views/Song/AzureSearch.cshtml
@@ -28,7 +28,7 @@
 {
     <div class="row">
         <div class="col-md-12">
-            <b>Raw Search Paramters: </b>@WebUtility.UrlDecode(ViewBag.RawSearch.ToString()) 
+            <b>Raw Search: </b>@WebUtility.UrlDecode(ViewBag.RawSearch.ToString()) 
         </div>
     </div>
 }
