--- a/m4d/Views/Song/RawSearch.cshtml
+++ b/m4d/Views/Song/RawSearch.cshtml
@@ -17,6 +17,14 @@
         @Html.HiddenFor(model => model.Text)
 
         <div class="form-group">
+            @Html.LabelFor(model => model.Text, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.EditorFor(model => model.Text, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.Text, "", new { @class = "text-danger" })
+            </div>
+        </div>
+
+        <div class="form-group">
             @Html.LabelFor(model => model.Filter, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
                 @Html.EditorFor(model => model.Filter, new { htmlAttributes = new { @class = "form-control" } })
