--- a/m4d/Views/Song/RawSearch.cshtml
+++ b/m4d/Views/Song/RawSearch.cshtml
@@ -1,33 +1,30 @@
 ﻿@model m4dModels.RawSearch
 
 @{
-    ViewBag.Title = "RawSearch";
+    ViewBag.Title = "Raw Search";
 }
 
-<h2>RawSearch</h2>
-
-@using (Html.BeginForm())
+@using (Html.BeginForm("RawSearch","Song"))
 {
     @Html.AntiForgeryToken()
     
     <div class="form-horizontal">
-        <h4>RawSearch</h4>
+        <h1>Raw Search</h1>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        @Html.HiddenFor(model => model.Text)
 
         <div class="form-group">
-            @Html.LabelFor(model => model.Text, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.SearchText, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Text, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.Text, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.SearchText, new { htmlAttributes = new { @class = "form-control wide-text-control" } })
+                @Html.ValidationMessageFor(model => model.SearchText, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
             @Html.LabelFor(model => model.Filter, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Filter, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Filter, new { htmlAttributes = new { @class = "form-control wide-text-control" } })
                 @Html.ValidationMessageFor(model => model.Filter, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -35,7 +32,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Sort, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Sort, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Sort, new { htmlAttributes = new { @class = "form-control wide-text-control" } })
                 @Html.ValidationMessageFor(model => model.Sort, "", new { @class = "text-danger" })
             </div>
         </div>
@@ -45,14 +42,14 @@
             <div class="col-md-10">
                 <div class="checkbox">
                     @Html.EditorFor(model => model.IsLucene)
-                    @Html.ValidationMessageFor(model => model.IsLucene, "", new { @class = "text-danger" })
+                    @Html.ValidationMessageFor(model => model.IsLucene, "", new {@class = "text-danger"})
                 </div>
             </div>
         </div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Save" class="btn btn-default" />
+                <button id="submit-search" class="btn btn-default" type="submit">Search <span class="glyphicon glyphicon-search"></span></button>
             </div>
         </div>
     </div>
